fixed burger icon alignment

--- a/space-tourism-website-challange/src/index.css
+++ b/space-tourism-website-challange/src/index.css
@@ -471,17 +471,20 @@ header {
     z-index: 3;
   }
 
+  .logo {
+    margin-left: 0;
+  }
   .bars-navbar {
     display: flex !important;
+    position: relative;
     z-index: 5;
-    /* margin-left: auto;
-    margin-right: 8%; */
-    /* margin-left: 30%; */
+    width: 50%;
+    margin-top: 2rem;
+    padding-right: 2rem;
   }
 
   .bars-navbar img {
-    transform: scale(0.6);
-    margin-top: 100%;
+    margin-left: auto;
   }
 
   .navbar {
@@ -503,8 +506,9 @@ header {
 
   .close {
     display: block;
-    margin-top: 3.5rem;
-    margin-left: 60%;
+    margin-top: 4rem;
+    margin-left: auto;
+    padding-right: 3.25rem;
     margin-bottom: 10%;
   }
 
